# user-manager-api

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
app/: app.py  connection.py  database.py  models.py  routes.py  security.py
migrations/: env.py
migrations/versions/: 5492a8997926_alter_password_length_to_255.py  b9c2848ea10e_create_users_table.py  df09fbe42b11_add_updated_at_in_user_table.py
src/app/: app.py
src/app/database/: connection.py  database.py
src/app/dependencies/: dependencies.py
src/app/models/: models.py  user.py
src/app/repositories/: base_repository.py  user_repository.py
src/app/routers/: app.py  auth.py  users.py
src/app/security/: security.py
src/app/services/: auth_service.py  base_service.py  user_service.py
src/migrations/: env.py
src/tests/: conftest.py  test_auth.py  test_db.py  test_users.py
task_list/: app.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_routes.py  test_security.py  test_users.py
